      \PR{15027}.

      \item \code{Sys.setLanguage()} now works in an \command{LC_ALL=C R} session
      on some platforms, warns about \emph{some} failures to change the
      language and gets an option related to these warning messages.

      \item Printing \code{ls.str()} now shows \code{"<missing>"} even when
      \R's language setting is not English.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The S-compatibility macros \code{F77_COM} and
      \code{F77_COMDECL} defined in header \file{R_ext/RS.h} are
      deprecated and will be removed shortly.  We could find no record
      of their use.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \I{Mathlib} function \code{lgammacor(x)} no longer warns about
      underflow to zero for large \code{x}.

      \item Text widths and heights were incorrectly reported by the
      Quartz device if the drawing context didn't exist yet (typically
      when drawing off-screen to a window that is yet to appear, see
      \PR{18591}).

      \item The Quartz device could segfault in cases where paths with
      spaces are used in the new glyph drawing API.
      Thanks to \I{Tomek Gieorgijewski} (\PR{18758}).
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.1}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Functions \code{R_atof} and \code{R_strtod} declared in
      header \file{R_ext/Utils.h} are now documented in
      \sQuote{Writing R Extensions} and so formally part of the API.

      \item The non-API entry points \code{Rf_setSVector},
      \code{Rf_StringFalse}, \code{Rf_StringTrue} and
      \code{Rf_isBlankString} have been added to those reported by
      \command{R CMD check}.

      \item The new function \code{Rf_allocLang} is now available. This
      provides an alternative to the idiom of calling
      \code{Rf_allocList} followed by \code{SET_TYPEOF}.
    }
  }

  \subsection{UTILITIES}{
    \itemize{