@@ -1,11 +1,13 @@
 
-R Under development (unstable) (2024-02-26 r85989) -- "Unsuffered Consequences"
+R Under development (unstable) (2024-08-29 r87078) -- "Unsuffered Consequences"
 Copyright (C) 2024 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
+
+  Natural language support but running in an English locale
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
@@ -3651,15 +3653,15 @@ attr(,"class")
 > 
 > ## IGNORE_RDIFF_BEGIN
 > pretty(Sys.Date())
-[1] "2024-02-24" "2024-02-25" "2024-02-26" "2024-02-27" "2024-02-28"
-[6] "2024-02-29"
+[1] "2024-08-28" "2024-08-29" "2024-08-30" "2024-08-31" "2024-09-01"
+[6] "2024-09-02"
 > pretty(Sys.time(), n = 10)
- [1] "2024-02-26 13:27:03 CET" "2024-02-26 13:27:04 CET"
- [3] "2024-02-26 13:27:05 CET" "2024-02-26 13:27:06 CET"
- [5] "2024-02-26 13:27:07 CET" "2024-02-26 13:27:08 CET"
- [7] "2024-02-26 13:27:09 CET" "2024-02-26 13:27:10 CET"
- [9] "2024-02-26 13:27:11 CET" "2024-02-26 13:27:12 CET"
-[11] "2024-02-26 13:27:13 CET"
+ [1] "2024-08-30 15:57:05 NZST" "2024-08-30 15:57:06 NZST"
+ [3] "2024-08-30 15:57:07 NZST" "2024-08-30 15:57:08 NZST"
+ [5] "2024-08-30 15:57:09 NZST" "2024-08-30 15:57:10 NZST"
+ [7] "2024-08-30 15:57:11 NZST" "2024-08-30 15:57:12 NZST"
+ [9] "2024-08-30 15:57:13 NZST" "2024-08-30 15:57:14 NZST"
+[11] "2024-08-30 15:57:15 NZST"
 > ## IGNORE_RDIFF_END
 > pretty(as.Date("2000-03-01")) # R 1.0.0 came in a leap year
 [1] "2000-02-28" "2000-02-29" "2000-03-01" "2000-03-02" "2000-03-03"
@@ -4298,6 +4300,21 @@ $number
  [75] 1 1 2 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
 
 > 
+> ## If missing coordinates exist, they are also counted
+> iris2 <- iris[1:10, 3:4]
+> iris2[4, 2] <- NA
+> iris2[c(3, 5), ] <- NA
+> xyTable(iris2)
+$x
+[1] 1.4 1.4 1.5 1.5 1.5 1.7  NA
+
+$y
+[1] 0.2 0.3 0.1 0.2  NA 0.4  NA
+
+$number
+[1] 3 1 1 1 1 1 2
+
+> 
 > ## Discretized uncorrelated Gaussian:
 > ## Don't show: 
 > set.seed(1)
@@ -4449,7 +4466,7 @@ NULL
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  29.951 0.398 30.64 0 0 
+Time elapsed:  29.539 0.389 31.994 0 0 
 > grDevices::dev.off()
 null device 
           1 
